--- a/docker/zms/conf/zms.properties
+++ b/docker/zms/conf/zms.properties
@@ -9,7 +9,7 @@
 
 # Comma separated list of authority implementation classes to support
 # authenticating principals in ZMS
-athenz.zms.authority_classes=com.yahoo.athenz.auth.oauth.OAuthCertBoundJwtAccessTokenAuthority,com.yahoo.athenz.auth.impl.CertificateAuthority
+athenz.zms.authority_classes=com.yahoo.athenz.common.server.debug.DebugUserAuthority
 
 # Principal Authority class. If defined and the caller asks for the header
 # name for the getUserToken api, the header from this authority will be
@@ -45,7 +45,7 @@ athenz.user_domain=user
 # the server will automatically create sys, sys.auth and user
 # domains and assign the specified users (comma separated list)
 # as the administrator for those domains
-athenz.zms.domain_admin=user.github-<your github ID>
+athenz.zms.domain_admin=user.admin
 
 # If File Private Key store implementation is used in the Server,
 # this setting specifies the path to the PEM encoded ZMS Server
