--- a/servers/zts/pom.xml
+++ b/servers/zts/pom.xml
@@ -217,6 +217,11 @@
       <artifactId>ehcache</artifactId>
       <version>3.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+      <version>5.0.3</version>
+    </dependency>
   </dependencies>
 
   <build>
