--- a/docker/zts/conf/zts.properties
+++ b/docker/zts/conf/zts.properties
@@ -527,3 +527,8 @@ athenz.zms.client.keymanager_password=dummy
 # Specifies the factory class that implements the StatusChecker interface
 # Used to check the status of the ZTS server
 #athenz.zts.status_checker_factory_class=
+
+athenz.zts.cache_store_factory_class=com.yahoo.athenz.zts.store.impl.EhcacheCacheStoreFactory
+athenz.zts.ehcache_store.persistence_dir=/opt/athenz/zts/var/ehcache/
+athenz.zts.ehcache_store.cache_heap_entries=10
+athenz.zts.ehcache_store.cache_disk_gb=1
